--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, ubuntu-16.04]
+    runs-on: ubuntu-latest
 
     steps:
     - uses: purcell/setup-emacs@master
